# FixPix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: detection.rs  hough.rs  image.rs  lib.rs  main.rs  mesh.rs  palette.rs  threading.rs
src/cli/: mod.rs
src/core/: mod.rs
tests/: fixture_smoke.rs  visual-artifacts-manifest.json  visual_artifacts.rs
