[package]
name = "fixpix"
version = "1.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "CPU-optimized native CLI for cleaning pixel-art-like images."

[[bin]]
name = "fixpix"
path = "src/main.rs"

[[bin]]
name = "fixpix-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "generate-visual-artifacts"
path = "src/bin/generate_visual_artifacts.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
